style: fix minor spacing issues in product page

--- a/client/src/product_site/auth/Auth.scoped.css
+++ b/client/src/product_site/auth/Auth.scoped.css
@@ -25,9 +25,10 @@
 }
 
 .form_col {
-  width: fit-content;
+  width: 18rem;
   display: flex;
   flex-direction: column;
+  gap: 0.7rem;
 }
 
 .additional-text {
