--- a/client/src/product_site/navbar/Navbar.scoped.css
+++ b/client/src/product_site/navbar/Navbar.scoped.css
@@ -30,11 +30,10 @@
 }
 
 .options {
-  width: 430px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  gap: 1rem;
 }
 
 .option-text {
